--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,7 +4,13 @@ project(nes)
 
 add_definitions(-std=c++1y)
 
-add_executable(nes
+add_library(nescore
     cpu.cpp
     memory.cpp
 )
+
+#add_executable(nes nes.cpp)
+#target_link_libraries(nes nescore)
+
+add_executable(test_nes test.cpp)
+target_link_libraries(test_nes nescore)
